Create a basic HTML structure for a portfolio

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-HELLO WORLD
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>簡約優雅 | 你的名字</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="card-container">
+        <header class="profile-header">
+            <div class="profile-image"></div>
+            
+            <h1>[你的名字]</h1>
+            <p class="role">品牌設計師 | UI/UX 顧問</p>
+        </header>
+
+        <main class="introduction">
+            <p class="quote">
+                專注於提升使用者體驗，將複雜概念轉化為**優雅而直觀**的設計解決方案。
+            </p>
+            
+            <section class="details">
+                <h2>專注領域</h2>
+                <ul>
+                    <li class="detail-item">視覺識別系統 (VI)</li>
+                    <li class="detail-item">響應式網頁設計</li>
+                    <li class="detail-item">互動原型製作</li>
+                </ul>
+            </section>
+        </main>
+
+        <footer class="contact-footer">
+            <h2>聯絡方式</h2>
+            <nav class="contact-links">
+                <a href="mailto:your.email@example.com" class="contact-link">📧 Email</a>
+                <span class="separator">/</span>
+                <a href="https://your-portfolio.com" target="_blank" class="contact-link">📂 作品集</a>
+                <span class="separator">/</span>
+                <a href="#" class="contact-link">🔗 LinkedIn</a>
+            </nav>
+        </footer>
+    </div>
+</body>
+</html>
+
