--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎨 [你的名字] | 藝術家作品集</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -32,7 +32,7 @@
         <div class="gallery-grid">
             
             <div class="artwork-card">
-                <img src="path/to/artwork1.jpg" alt="作品一：城市之光"> 
+                <img src="images/artwork1.jpg" alt="作品一：城市之光"> 
                 <div class="artwork-info">
                     <h3>城市之光</h3>
                     <p class="description">一幅描繪都市夜景的油畫，利用高對比的藍色和黃色調，展現喧囂中的寧靜。探索光與影在現代建築上的交互作用。</p>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="artwork-card">
-                <img src="path/to/artwork2.jpg" alt="作品二：山間晨霧"> 
+                <img src="images/artwork2.jpg" alt="作品二：山間晨霧"> 
                 <div class="artwork-info">
                     <h3>山間晨霧</h3>
                     <p class="description">水彩作品，使用柔和的漸層藍色 (如 #AAC4F5)，捕捉清晨山脈間瀰漫的霧氣，營造空靈靜謐的氛圍。</p>
@@ -50,7 +50,7 @@
             </div>
 
             <div class="artwork-card">
-                <img src="path/to/artwork3.jpg" alt="作品三：夢境的魚"> 
+                <img src="images/artwork3.jpg" alt="作品三：夢境的魚"> 
                 <div class="artwork-info">
                     <h3>夢境的魚</h3>
                     <p class="description">數位繪畫，結合抽象與具象的元素，以夢幻般的色彩 (#8CA9FF) 描繪一條漂浮在太空中的金魚，表達內心的自由與奔放。</p>
@@ -58,7 +58,7 @@
                 </div>
             </div>
 
-            </div>
+        </div>
     </section>
 
     <section id="about" class="about-section">
